# QuickLauncher

./: .CLAUDE.md  .CODEX.md  .coverage.LEI.pid14136.XSbb4BFx.HC8wRRMlUBCh  .coverage.LEI.pid15968.XvYTaYwx.HNQIp837rWOh  .coverage.LEI.pid23036.XyIKx1Vx.HGTB2FO1hBPh  .gitattributes  .gitignore  .pre-commit-config.yaml  1.5.5更新说明.txt  1.5.6更新说明.txt  1.6.3.md  20260606_ISSUE_REVIEW_REPORT.md  20260606_NEXT_PLAN.md  ACTION_CHAIN_MODULE_ROADMAP.md  ACTION_CHAIN_PROCESSORS_AUDIT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_ISSUES_ANALYSIS.md  CONTRIBUTING.md  GLOBAL_HOOK_FIX_REPORT.md  LICENSE  NEXT_PLAN.md  OPTIMIZATION_PLAN_1.7.0.md  PLUGIN_DEV.md  QUALITY_AUDIT_1.6.2.0.md  QuickLauncher.manifest  QuickLauncher_Portable_1.6.2.0  README.md  README_EN.md  README_FULL.md  README_FULL_EN.md  TASKBAR_TRIGGER_IMPLEMENTATION.md  THREADING_AUDIT.md  UI_OPTIMIZATION_PLAN.md  _test_update_dialog.py  _wire_drag_mixin.py  a.py  find_ui_strings.py  main.py  (+22 more)
.claude/: settings.local.json
.github/: GITHUB_GUIDE.md  PULL_REQUEST_TEMPLATE.md
.plugins/: README.md  api_tester.qlzip  disk_cleaner.qlzip  event_inspector.qlzip  file_tools.qlzip  network_tools.qlzip  process_tools.qlzip  qr_code_scanner.qlzip  screenshot_ocr.qlzip  startup_tools.qlzip  text_tools.qlzip
PerformanceMonitor/: README.md  monitor.py
application/: __init__.py  errors.py  events.py  execution_services.py  logging_context.py  structured_formatter.py
bootstrap/: app_context.py  composition_root.py  deps.py  dpi.py  gui_application.py  ipc.py  lifecycle.py  logging_init.py  native_loader.py  plugin_factory.py  (+5 more)
(+880 files in other folders)
